--- a/src/pages/profile/profile.scss
+++ b/src/pages/profile/profile.scss
@@ -1,3 +1,10 @@
 page-profile {
+.center{
+     text-align:center;
+}
 
+.summitbutton{
+    height: 30px !important;
+    font-size: 15px !important;
+}
 }
