--- a/src/pages/login/login.scss
+++ b/src/pages/login/login.scss
@@ -29,4 +29,8 @@ page-login {
 ion-input {
     border-bottom: 1px solid  #008000;
     }
+
+.toolbar-background-md {
+    background-color: #FFFFFF
+}
 }
