--- a/src/pages/forgotpassword/forgotpassword.scss
+++ b/src/pages/forgotpassword/forgotpassword.scss
@@ -1,19 +1,18 @@
-page-login {
-    .login-background{
-     background-image: url(/assets/imgs/login-bg1.jpg);
+page-forgotpassword {
+  .background{
+    background-image: url(/assets/imgs/login-bg1.jpg);
     height: 100%;
     width: 100%;
     background-position: center;
     position: fixed;
     background-size: cover;
-    text-align: center
 }
 .login-card{
     margin-top: 40%;
-    color: #fff;    background-image: url(/assets/img/bg-strips-light.jpg);
+    color: #fff;    background-image: url('assets/img/bg-strips-light.jpg');
     background-repeat: repeat;
 }
-.login-btn{
+.submitbtn{
     color: #FFFFFF;
     background-image: none;
     background-color: #32CD32;
@@ -24,7 +23,6 @@ page-login {
 .login-links{
     font-size: smaller;
     font-weight: normal;
-    color: #488aff;
 }
 
  .invalid {
