most ui is done

--- a/src/pages/orderhistory/orderhistory.scss
+++ b/src/pages/orderhistory/orderhistory.scss
@@ -1,7 +1,6 @@
-page-awaitingapproval {
-
+page-orderhistory {
  .background{
-    background-image: url(/assets/imgs/login-bg1.jpg);
+     background-image: url(/assets/imgs/login-bg1.jpg);
     height: 100%;
     width: 100%;
     background-position: center;
