--- a/src/pages/cart/cart.scss
+++ b/src/pages/cart/cart.scss
@@ -1,4 +1,13 @@
 page-cart {
+  .background{
+     background-image: url(/assets/imgs/login-bg1.jpg);
+    height: 100%;
+    width: 100%;
+    background-position: center;
+    position: fixed;
+    background-size: cover;
+}
+
     .form-row{
         padding: 10px;
       }
