--- a/src/pages/orderdetails/orderdetails.scss
+++ b/src/pages/orderdetails/orderdetails.scss
@@ -1,12 +1,10 @@
-page-awaitingapproval {
-
- .background{
+page-orderdetails {
+.background{
     background-image: url('../assets/imgs/login-bg1.jpg');
     height: 100%;
     width: 100%;
     background-position: center;
     position: fixed;
     background-size: cover;
-    text-align: center
 }
 }
