--- a/src/pages/profile/profile.scss
+++ b/src/pages/profile/profile.scss
@@ -7,4 +7,14 @@ page-profile {
     height: 30px !important;
     font-size: 15px !important;
 }
+
+ .background{
+    background-image: url('../assets/imgs/login-bg1.jpg');
+    height: 100%;
+    width: 100%;
+    background-position: center;
+    position: fixed;
+    background-size: cover;
+    text-align: center
+}
 }
