--- a/src/pages/register/register.scss
+++ b/src/pages/register/register.scss
@@ -1,6 +1,6 @@
  page-register {
      .background{
-    background-image: url(/assets/imgs/login-bg1.jpg);
+    background-image: url('../assets/imgs/login-bg1.jpg');
     height: 100%;
     width: 100%;
     background-position: center;
