--- a/src/pages/upload/upload.scss
+++ b/src/pages/upload/upload.scss
@@ -1,6 +1,6 @@
 page-upload {
  .background{
-     background-image: url(/assets/imgs/login-bg1.jpg);
+    background-image: url('../assets/imgs/login-bg1.jpg');
     height: 100%;
     width: 100%;
     background-position: center;
