--- a/src/pages/orderhistory/orderhistory.scss
+++ b/src/pages/orderhistory/orderhistory.scss
@@ -8,4 +8,9 @@ page-orderhistory {
     background-size: cover;
     text-align: center
 }
+.maintext{
+    text-align: start;
+    margin-top: 0px !important;
+    margin-left: 15px;
+}
 }
